--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,15 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "matplotlib (>=3.10.3,<4.0.0)",
+    "numpy (>=2.3.0,<3.0.0)"
 ]
 
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+
+[tool.poetry]
+package-mode = false
